--- a/mindflow_frontend/pubspec.yaml
+++ b/mindflow_frontend/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   go_router: ^12.1.1
+  loading_animation_widget: ^1.2.0+4
+  speech_to_text: ^6.4.1
+  permission_handler: ^11.0.1
 
 dev_dependencies:
   flutter_test:
